applications/assignmentRules/objects/DLCObj18__c.object
<CustomObject>
    <fields>
        <fullName>Field1__c</fullName>
        <label>Field1</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>Field2</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field5__c</fullName>
        <label>Field5</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>DLCObj18</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Field1__c</columns>
        <columns>Field2__c</columns>
        <columns>Field5__c</columns>
        <columns>AutorabitExtId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DLCObj18 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DLCObj18s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>